--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido a mi portafolio</h3>
-      <p>Soy un emprendedor perfeccionando sus hábilidades, portafolio hecho usando github pages</p>
+      <p>Soy un emprendedor perfeccionando sus hábilidades</p>
     </div>
 
     <div class="bloque">
